Stock_en_Vehículo: Diseño terminado
Se ha elaborado un diseño más simple.

--- a/app/src/main/res/drawable/contenedor_items_stock_vehiculo.xml
+++ b/app/src/main/res/drawable/contenedor_items_stock_vehiculo.xml
@@ -5,8 +5,8 @@
 
 
 
-    <stroke android:width="2dip"
-        android:color="#03a9f4" />
+    <stroke android:width="4dip"
+        android:color="#283593" />
 
     <padding android:left="0dp"
         android:top="0dp"
@@ -14,7 +14,8 @@
         android:bottom="0dp"/>
 
 
-    <corners android:radius="10px" android:topLeftRadius="10dp" android:topRightRadius="10dp"/>
+    <corners android:radius="10px" android:topLeftRadius="10dp" android:topRightRadius="10dp"
+        android:bottomLeftRadius="10px" android:bottomRightRadius="10px"/>
 
 
 
